added more content

--- a/Code/Drew/htmlcss/lab02-blog.html
+++ b/Code/Drew/htmlcss/lab02-blog.html
@@ -50,6 +50,11 @@
       align-items: center;
       background-color: #ff71ce90;
       width: 370px;
+      /* position: -webkit-sticky; */
+      /* position: sticky; */
+      /* position: fixed; */
+      /* top: 0; */
+
     }
     .sidebar-item {
       padding-top: 25px;
@@ -58,6 +63,10 @@
       font-family: 'VT323', monospace;
       font-size: 3em;
       text-shadow: 2px 1px 1px black;
+      position: -webkit-sticky;
+      position: sticky;
+      /* position: fixed; */
+      top: 0;
     }
     html {
       height: 100%;
@@ -111,20 +120,24 @@
     </div>
     <div class="content-container">
     <div class="content ptmono">
-   <h1>We need rest. The spirit is willing, but the flesh is spongy and bruised.</h1>
-<p>Bender, being God isn't easy. If you do too much, people get dependent on you, and if you do nothing, they lose hope. You have to use a light touch. Like a safecracker, or a pickpocket. Meh. We're rescuing ya.</p>
-<p>Oh, you're a dollar naughtier than most. The alien mothership is in orbit here. If we can hit that bullseye, the rest of the dominoes will fall like a house of cards. <strong> Checkmate.</strong> <em> Why am I sticky and naked?</em> Did I miss something fun?</p>
-<h2>Do a flip!</h2>
-<p>Fatal. It's okay, Bender. I like cooking too. Soon enough. Ooh, name it after me! Fry! Stay back! He's too powerful! Hello Morbo, how's the family?</p>
-<ol>
-
-    <li>Oh yeah, good luck with that.</li><li>And yet you haven't said what I told you to say! How can any of us trust you?</li><li>Humans dating robots is sick. You people wonder why I'm still single? It's 'cause all the fine robot sisters are dating humans!</li>
-
-</ol>
-
-<h3>This opera's as lousy as it is brilliant! Your lyrics lack subtlety. You can't just have your characters announce how they feel. That makes me feel angry!</h3>
-<p>Tell them I hate them. Why did you bring us here? I just want to talk. It has nothing to do with mating. Fry, that doesn't make sense. Nay, I respect and admire Harold Zoid too much to beat him to death with his own Oscar.</p>
+      <h1>We need rest. The spirit is willing, but the flesh is spongy and bruised.</h1>
+      <p>Bender, being God isn't easy. If you do too much, people get dependent on you, and if you do nothing, they lose hope. You have to use a light touch. Like a safecracker, or a pickpocket. Meh. We're rescuing ya.</p>
+      <p>Oh, you're a dollar naughtier than most. The alien mothership is in orbit here. If we can hit that bullseye, the rest of the dominoes will fall like a house of cards. <strong> Checkmate.</strong> <em> Why am I sticky and naked?</em> Did I miss something fun?</p>
+      <h2>Do a flip!</h2>
+      <p>Fatal. It's okay, Bender. I like cooking too. Soon enough. Ooh, name it after me! Fry! Stay back! He's too powerful! Hello Morbo, how's the family?</p>
+      <ol>
+        <li>Oh yeah, good luck with that.</li><li>And yet you haven't said what I told you to say! How can any of us trust you?</li><li>Humans dating robots is sick. You people wonder why I'm still single? It's 'cause all the fine robot sisters are dating humans!</li>
+      </ol>
+      <h3>This opera's as lousy as it is brilliant! Your lyrics lack subtlety. You can't just have your characters announce how they feel. That makes me feel angry!</h3>
+      <p>Tell them I hate them. Why did you bring us here? I just want to talk. It has nothing to do with mating. Fry, that doesn't make sense. Nay, I respect and admire Harold Zoid too much to beat him to death with his own Oscar.</p>
     </div>
+    <div class="content ptmono">
+      <h1>Moving along…</h1>
+      <p>Doomsday device? Ah, now the ball's in Farnsworth's court! I was all of history's great robot actors - Acting Unit 0.8; Thespomat; David Duchovny! No, she'll probably make me do it. File not found.</p>
+      <p>I'll tell them you went down prying the wedding ring off his cold, dead finger. THE BIG BRAIN AM WINNING AGAIN! I AM THE GREETEST! NOW I AM LEAVING EARTH, FOR NO RAISEN! <strong> It's a T.</strong> <em> It goes "tuh".</em> And remember, don't do anything that affects anything, unless it turns out you were supposed to, in which case, for the love of God, don't not do it!</p>
+      <h2>Shinier than yours, meatbag.</h2>
+      <p>Why did you bring us here? Oh no! The professor will hit me! But if Zoidberg 'fixes' it… then perhaps gifts! No, she'll probably make me do it. This is the worst part. The calm before the battle.</p>
+    <div>
   </div>
   <img class="bottomright" src="images/palmtree.png" alt="">
 </body>
