--- a/Code/Drew/htmlcss/lab02-blog.html
+++ b/Code/Drew/htmlcss/lab02-blog.html
@@ -21,7 +21,7 @@
     }
     .logo {
       margin-right: auto;
-      margin-left: 25px;
+      /* margin-left: 25px; */
       height: 130px;
       /* flex: 1; */
     }
@@ -63,10 +63,10 @@
       font-family: 'VT323', monospace;
       font-size: 3em;
       text-shadow: 2px 1px 1px black;
-      position: -webkit-sticky;
-      position: sticky;
+      /* position: -webkit-sticky; */
+      /* position: sticky; */
       /* position: fixed; */
-      top: 0;
+      /* top: 0; */
     }
     html {
       height: 100%;
@@ -107,6 +107,7 @@
 
   <div class="header">
     <img class="logo" src="images/vasun.png" alt="Blog">
+    <div class="header-right"></div>
     <img id="blogname" src="images/blogtitle2.png" alt="Flonkx">
     <div class="header-right"></div>
   </div>
