--- a/Code/darren/html_lab2.html
+++ b/Code/darren/html_lab2.html
@@ -58,9 +58,6 @@
       }
       .sidebar {
         grid-area: "sidebar";
-        margin-left: 3%;
-        margin-top: 3%;
-        margin-bottom: 3%;
         background-image:url("starbursts.jpg");
         font-family:'Atomic Age', serif;
         font-size: 12px;
@@ -68,13 +65,12 @@
         border-radius: 25px;
         border: 2px solid #FF5EA0;
         text-align: left;
-        padding-left:10%;
-        padding-right: 3%;
         filter: drop-shadow(0px 5px 4px purple);
+        margin: 5%
       }
       .footer {
         grid-area: "footer";
-        background-color: lightblue;
+        background-image: url("doodle_turq_400.jpg");
         grid-row-start: 4;
         grid-row-end: 5;
         grid-column-start: 1;
@@ -96,7 +92,6 @@
         grid-row-end: 2;
         grid-column-start: 3;
         grid-column-end: 5;
-        color: white;
         margin-right: 1%;
         margin-left: 1%;
         margin-top: 1%;
@@ -146,12 +141,22 @@
         grid-row-end: 4;
         grid-column-start: 4;
         grid-column-end: 5;
+        padding-left: 5%
+      }
+      #month_frame {
+        display: flex;
+        flex-direction: column;
+        align-content: space-around;
+        margin: 5%;
+        padding: 5%;
       }
 
-      #rockets {
-        width: 200px;
-        margin: 5%;
-        object-fit: cover;
+      #month_frame > * {
+        display:block;
+        width: 100%;
+        margin: 0 auto;
+        padding-top:5%;
+        padding-bottom:5%;
       }
 
       @media (min-width: 600px)
@@ -173,20 +178,20 @@
         </div>
       </header>
       <article class="main" id="blog_posts">
-          <div id="bp1">
+          <div class="bp" id="bp1">
             <h2>Acid Cable</h2>
             <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
           </div>
-          <div id="bp2">
+          <div class="bp" id="bp2">
             <h2>Hollow Border</h2>
             <p>With pretty stories for which there's little good evidence Cambrian explosion vanquish the impossible emerged into consciousness nisi ut aliquid ex ea commodi consequatur sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem? Sea of Tranquility sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo astonishment gathered by gravity from which we spring and billions upon billions upon billions upon billions upon billions upon billions upon billions.
             <img id="boom" src="boomerangs.jpg"/></p>
           </div>
-          <div id="bp3">
+          <div class="bp" id="bp3">
             <h2>Condemned Cent</h2>
             <p>From Emma manner Golden Thing seemed these malady dimensions youth. Come that hieroglyphics Briden word party entirely come waterfront listened? Himself about only seems aeons second overtake green Wilcox period! Johansen halting there matter Wilcox island Egeberg fever bas-reliefs from? Things—in frightful visions geologists reeling surfaces—surfaces monstrosity laughing incalculable turned. Everyone pieced unknown come cloud cult plasticity little galleon manage? Falling theosophists accursed appear bursting wife whirling from record helped? This thorough subterrene down dream occurred mental home when dismissed!</p>
           </div>
-          <div id="bp4">
+          <div class="bp" id="bp4">
             <h2>Cheap Cracker</h2>
             <p>In the works of Stone, a predominant concept is the distinction between ground and figure. Thus, if the predialectic paradigm of consensus holds, we have to choose between feminism and neomaterialist cultural theory. Bataille’s critique of pretextual theory suggests that reality serves to exploit minorities.It could be said that Lyotard uses the term ‘neotextual constructive theory’ to denote the common ground between society and class. The subject is interpolated into a predialectic paradigm of consensus that includes sexuality as a whole. Thus, Lacan suggests the use of subpatriarchialist textual theory to read and modify society.</p>
           </div>
@@ -199,7 +204,13 @@
           <li><a href="https://www.merriam-webster.com/dictionary/ne%20cede%20malis">2018</a></li>
           <li><a href="https://www.merriam-webster.com/dictionary/ne%20cede%20malis">2019</a></li>
           <li><a href="https://www.merriam-webster.com/dictionary/ne%20cede%20malis">2020</a></li>
+        </div>
+        <div id="month_frame">
           <img id="rockets" src="rockets.png"/></p>
+          <input type="search"></input>
+          <input type="datetime-local">
+          <input type="week"></input>
+          <input type="month"></input>
         </div>
       </aside>
       <footer class="footer" id="links">Footer
