--- a/Code/Drew/htmlcss/lab02-blog.html
+++ b/Code/Drew/htmlcss/lab02-blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Major+Mono+Display|PT+Mono|VT323" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ｆｌｅｘ　ス・き</title>
     <style type="text/css">
@@ -34,15 +34,14 @@
       /* align-self: center; */
       position:fixed;
       top: 0;
-      background-color: #01cdfe60;
-      background-image: linear-gradient(to right, #01cdfe, #b967ff50), url("images/spaceback.png");
+      background-image: linear-gradient(to right, #01cdfe98, #b967ff40), url("images/spaceback.png");
       height: auto;
       width: 100%;
     }
     #blogname {
       /* filter: drop-shadow(8px 8px 8px #b967ff); */
       border: 10px yellow;
-      font-family: 'VT323', monospace;
+      font-family: 'PT Mono', monospace;
       font-size: 50px;
     }
     .header-item {
@@ -106,11 +105,11 @@
       opacity: 0.8;
     }
     .content {
-      margin: 40px;
+      margin: 30px;
       padding: 40px;
       background-color: #05ffa160;
       box-shadow: 15px 15px #a5b0ad91;
-      width: 70%
+      width: 70%;
       align-self: auto;
       /* height:auto; */
     }
@@ -118,13 +117,14 @@
       margin-left: 200px;
       margin-top: 150px;
     }
-    .hannari {
-      font-size:10vw;
-      min-height:100vw
-      font-family:Hannari,script;
+    .japanese {
+      font-size:8vw;
+      min-height:100vw;
+      font-family:Sawarabi Mincho,serif;
       color: #403932;
-      margin-top: 120px;
-      margin-right:auto;
+      margin-top: 160px;
+      width: 100px;
+      margin-right:100px;
       margin-left:auto;
       -ms-writing-mode:tb-rl;
       -moz-writing-mode:vertical-rl;
@@ -136,7 +136,7 @@
       -webkit-text-orientation:upright;
       -moz-text-orientation:upright;
       -ms-text-orientation:upright;
-      text-orientation:upright
+      text-orientation:upright;
     }
 </style>
 </head>
@@ -145,8 +145,8 @@
   <div class="header">
     <img class="logo" src="images/vasun.png" alt="Blog">
     <div class="header-right"></div>
-    <!-- <img id="blogname" src="images/blogtitle2.png" alt="Flonkx"> -->
-    <div id="blogname"><span>f l e x x y ░ b l o g g y</span></div>
+    <img id="blogname" src="images/blogtitle4.png" alt="Flonkx">
+    <!-- <div id="blogname"><span>f l e x x y ░ b l o g g y</span></div> -->
     <div class="header-right"></div>
   </div>
   <div style="display:flex;flex-direction:row;">
@@ -178,9 +178,9 @@
       <p>Why did you bring us here? Oh no! The professor will hit me! But if Zoidberg 'fixes' it… then perhaps gifts! No, she'll probably make me do it. This is the worst part. The calm before the battle.</p>
     </div>
     </div>
-    <div class="hannari">
+    <div class="japanese">
       <div>
-        水曜日です。
+        水曜日です
       </div>
   </div>
 
