--- a/Code/Drew/htmlcss/lab02-blog.html
+++ b/Code/Drew/htmlcss/lab02-blog.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Major+Mono+Display|PT+Mono|VT323" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ｆｌｅｘ　ス・き</title>
+    <title>ｆｌｅｘｘｙ░ｔｉｍｅ　（しポ威）</title>
     <style type="text/css">
     .major {
     font-family: 'Major Mono Display', monospace;
@@ -73,7 +73,7 @@
       flex-basis: auto;
       font-family: 'VT323', monospace;
       font-size: 3em;
-      text-shadow: 2px 1px 1px black;
+      text-shadow: 2px 2px 1px black;
       /* position: -webkit-sticky; */
       /* position: sticky; */
       /* position: fixed; */
@@ -87,9 +87,6 @@
       height: 100%;
       margin: 0px;
       background-image: url("images/vwbg.jpg");
-    }
-    ul {
-      font-family: 'VT323', monospace;
     }
     a:link {
       color: #ffd35a;
@@ -106,6 +103,7 @@
     }
     .content {
       margin: 30px;
+      margin-bottom: 40px; 
       padding: 40px;
       background-color: #05ffa160;
       box-shadow: 15px 15px #a5b0ad91;
@@ -186,7 +184,7 @@
     </div>
     <div class="japanese">
       <div>
-        水曜日です
+        水曜日です - 或いは
       </div>
   </div>
 
