--- a/Code/darren/html_lab2.html
+++ b/Code/darren/html_lab2.html
@@ -20,7 +20,7 @@
       .container {
         display: grid;
         grid-template-columns: 25% 25% 25% 25%;
-        grid-template-rows: 10% 75% auto 5%;
+        grid-template-rows: 10% 70% auto;
         grid-template-areas:
           "header header header header"
           "main main main sidebar"
@@ -39,22 +39,75 @@
         grid-row-end: 2;
         border-radius: 25px;
         border: 2px solid #FF5EA0;
-        padding-left: 3%;
-        font-family:'Atomic Age', serif;
-        font-size: 20px;
-        color:#B5095F;
         filter: drop-shadow(0px 5px 4px purple);
         display:flex;
         flex-direction:row;
         justify-content: space-between;
         align-items: flex-start
       }
+      .header > h1 {
+        margin: 5%;
+        font-family:'Atomic Age', serif;
+        font-size: 300%;
+        padding-bottom: 25%;
+        color:#B5095F;
+      }
+      .button {
+        user-select: none;
+        -moz-user-select: none;
+        cursor:pointer;
+        border-radius: 25px;
+        border: 2px transparent black;
+        filter: drop-shadow(0px 5px 4px black);
+        grid-row-start: 1;
+        grid-row-end: 1;
+        grid-column-start: 3;
+        grid-column-end: 5;
+        margin: 2%;
+        text-align: center;
+        display: inline-block;
+        background-image:url("starbursts.jpg");
+        font-family:'Atomic Age', serif;
+        color: #B5095F;
+        font-size: 14px;
+        width: 40%;
+        height: 20%;
+        transition: 0.5s;
+      }
+      .button:hover {
+        width: 45%;
+        height: 25%;
+      }
+      #multi_button {
+        padding-top: 2%
+      }
       .main {
         grid-area: "main";
         grid-row-start: 2;
-        grid-row-end: 4;
+        grid-row-end: 2;
         grid-column-start: 1;
         grid-column-end: 4;
+        margin: 3%
+      }
+      #blog_posts {
+        display: flex;
+        flex-direction: column;
+        align-content: space-around;
+      }
+      #blog_posts > div {
+        border-radius: 25px;
+        border: 2px transparent black;
+        padding: 1%;
+        margin: 1%;
+        text-align: left;
+        background-image:url("stars.jpg");
+        filter: drop-shadow(0px 5px 4px black);
+      }
+      #boom {
+        width: 150px;
+        padding-right: 2%;
+        padding-top: 2%;
+        float: left;
       }
       .sidebar {
         grid-area: "sidebar";
@@ -68,6 +121,32 @@
         filter: drop-shadow(0px 5px 4px purple);
         margin: 5%
       }
+      #years_bar {
+        grid-row-start: 2;
+        grid-row-end: 4;
+        grid-column-start: 4;
+        grid-column-end: 5;
+        padding: 5%;
+        margin: 5%;
+      }
+      #month_frame {
+        display: flex;
+        flex-direction: column;
+        align-content: space-around;
+        margin: 5%;
+        padding: 5%;
+      }
+      #month_frame > * {
+        display:block;
+        width: 100%;
+        margin: 0 auto;
+        padding-top:5%;
+        padding-bottom:5%;
+      }
+      @media (min-width: 600px){
+        #years_bar {
+          font-size:20px; }
+      }
       .footer {
         grid-area: "footer";
         background-image: url("doodle_turq_400.jpg");
@@ -77,90 +156,10 @@
         grid-column-end: 5;
         border-radius: 25px;
         border: 2px solid #FF5EA0;
-        padding-left: 3%;
-        margin-bottom: 3%;
+        padding: 5%;
+        margin: 5%;
         filter: drop-shadow(0px 5px 4px purple)
       }
-      .button {
-        user-select: none;
-        -moz-user-select: none;
-        cursor:pointer;
-        border-radius: 25px;
-        border: 2px transparent black;
-        filter: drop-shadow(0px 5px 4px black);
-        grid-row-start: 1;
-        grid-row-end: 2;
-        grid-column-start: 3;
-        grid-column-end: 5;
-        margin-right: 1%;
-        margin-left: 1%;
-        margin-top: 1%;
-        margin-bottom: 2%;
-        text-align: center;
-        display: inline-block;
-        background-image:url("starbursts.jpg");
-        font-family:'Atomic Age', serif;
-        color: #B5095F;
-        font-size: 14px;
-      }
-
-      #blog_posts {
-        display: flex;
-        flex-direction: column;
-        align-content: space-around;
-      }
-      #blog_posts > div {
-        border-radius: 25px;
-        border: 2px transparent black;
-        padding-left: 5%;
-        padding-right: 5%;
-        padding-bottom:2%;
-        margin-top: 1%;
-        margin-bottom: 1%;
-        text-align: left;
-        background-image:url("stars.jpg");
-        filter: drop-shadow(0px 5px 4px black);
-      }
-      .button {
-        width: 40%;
-        height: 20%;
-        transition: 0.5s;
-      }
-      .button:hover {
-        width: 50%;
-        height: 40%;
-      }
-      #boom {
-        width: 150px;
-        padding-right: 2%;
-        padding-top: 2%;
-        float: left;
-      }
-      #years_bar {
-        grid-row-start: 2;
-        grid-row-end: 4;
-        grid-column-start: 4;
-        grid-column-end: 5;
-        padding-left: 5%
-      }
-      #month_frame {
-        display: flex;
-        flex-direction: column;
-        align-content: space-around;
-        margin: 5%;
-        padding: 5%;
-      }
-
-      #month_frame > * {
-        display:block;
-        width: 100%;
-        margin: 0 auto;
-        padding-top:5%;
-        padding-bottom:5%;
-      }
-
-      @media (min-width: 600px)
-      { #years_bar { font-size:20px; } }
 
     </style>
   </head>
@@ -213,9 +212,9 @@
           <input type="month"></input>
         </div>
       </aside>
-      <footer class="footer" id="links">Footer
+    </div>
+      <footer class="footer" id="links">
         <a href="https://www.merriam-webster.com/dictionary/ne%20cede%20malis">Ne Cede Malis</a>
       </footer>
-    </div>
   </body>
 </html>
