--- a/Code/darren/html_lab2.html
+++ b/Code/darren/html_lab2.html
@@ -52,16 +52,16 @@
       .header > *{
         padding: 1%;
       }
-      @media (max-width: 500px) {
+      @media (max-width: 1000px) {
         .header {
-          font-size:100%; }
+          font-size:80%; }
       }
       .button {
         user-select: none;
         -moz-user-select: none;
         cursor:pointer;
         border-radius: 25px;
-        border: 2px transparent black;
+        border: 2px solid #B5095F;
         filter: drop-shadow(0px 5px 4px black);
         grid-row-start: 1;
         grid-row-end: 1;
@@ -81,7 +81,19 @@
       .button:hover {
         width: 45%;
         height: 25%;
+        animation-name:flicker;
+        animation-duration: 5s;
+        animation-iteration-count: infinite;
       }
+
+      @keyframes flicker{
+        40% {
+          color: #FF6BE8;
+          border: 2px solid #FF6BE8;
+          filter: drop-shadow(0px 5px 4px #FF6BE8);
+        }
+      }
+
       #multi_button {
         padding-top: 2%
       }
@@ -171,7 +183,6 @@
         margin: 5%;
         filter: drop-shadow(0px 5px 4px purple)
       }
-
     </style>
   </head>
   <body>
