fixed navbar margin

--- a/Code/Drew/htmlcss/lab04-personal_portfolio.html
+++ b/Code/Drew/htmlcss/lab04-personal_portfolio.html
@@ -25,18 +25,21 @@
         justify-content: space-around;
         background-color: #000000;
         padding-bottom: 30px;
-        margin-bottom: 0px;
+        margin-bottom: -5px;
       }
       .nav-button {
         color: white;
       }
       #city-hang {
+        margin: 0px;
+        border: 0px;
+        padding: 0px;
         transform:rotate(180deg);
         filter:contrast(70%);
         filter: hue-rotate(90deg);
       }
       body {
-        height: 2000px;
+        height: 1500px;
         /* background-image: url(images/starback.png); */
         background: linear-gradient(to bottom, black 0%, black 10%, #a543b1 12%, #7223c1 30%, #00000000), url(images/starback.png);
         margin: 0px;
