working on colors

--- a/Code/Drew/htmlcss/lab04-personal_portfolio.html
+++ b/Code/Drew/htmlcss/lab04-personal_portfolio.html
@@ -9,9 +9,10 @@
       .header {
         display: flex;
         flex-direction: column;
-        background-color: black;
+        background: linear-gradient(to bottom, black, #111111);
+        /* background-color: black; */
         margin-bottom: auto;
-        height: auto;
+        height: 10%;
       }
       #header-name {
         font-family: 'Alfa Slab One', cursive;
@@ -23,7 +24,8 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        background-color: #000000;
+        /* background-color: #000000; */
+        background: linear-gradient(to bottom, #111111, #262626);
         padding-bottom: 30px;
         margin-bottom: -5px;
       }
@@ -36,12 +38,12 @@
         padding: 0px;
         transform:rotate(180deg);
         filter:contrast(70%);
-        filter: hue-rotate(90deg);
+        /* filter: hue-rotate(90deg); */
       }
       body {
         height: 1500px;
         /* background-image: url(images/starback.png); */
-        background: linear-gradient(to bottom, black 0%, black 10%, #a543b1 12%, #7223c1 30%, #00000000), url(images/starback.png);
+        background: linear-gradient(to bottom, black 0%, black 10%, #8500c2 11%, #8501bd 20%, #6d00b7 30%, #4200b0 40%, #22059f 50%, #020087 60%, #00000000), url(images/starback.png);
         margin: 0px;
         /* margin-left: 0px; */
         /* margin-right: 0px; */
