Added JavaScript Lab 3

--- a/Code/darren/javascriptlab3.html
+++ b/Code/darren/javascriptlab3.html
@@ -50,7 +50,7 @@
       hand.push(userCard)}
     return hand
   }
-  alert("Card Avisor: JavaScript Edition")
+  alert("Card Advisor: JavaScript Edition")
   let userHand = handMaker(3)
   alert(userHand)
   let handTotal = cardCalculator(userHand)
