--- a/Code/Drew/javascript/lab01-8ball.html
+++ b/Code/Drew/javascript/lab01-8ball.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Magic 8 Ball</title>
+    <link href="https://fonts.googleapis.com/css?family=Francois+One|Kanit" rel="stylesheet">
     <style type="text/css">
     body {
       background-color: #0e1b9b;
     }
     header {
       text-align: center;
-      font-size: 50px;
+      font-size: 60px;
+      font-family: 'Francois One', sans-serif;
+      text-shadow: 1px 1px 10px #65eee2
     }
     .form {
       display: flex;
@@ -18,18 +21,20 @@
       justify-content: center;
       align-items: baseline;
     }
+    .spacer {
+      flex-grow: 1
+    }
     #text_input {
       text-align: center;
       width: 300px;
       margin: 50px;
-    }
-    #submit_button {
-
+      margin-left: 100px;
     }
     #output_div {
       color: #a6f1f6;
       font-size: 40px;
       text-align: center;
+      font-family: 'Kanit', sans-serif;
     }
     #ball {
       position: absolute;
@@ -59,8 +64,6 @@
     <img id="ball" src="https://pixabay.com/get/eb30b70c21e90021d85a5840e74e4690e676e6dc04b0144491f4c17ba5efbc/ball-25639_1280.png" alt="">
     <div id="output_div">output</div>
     <script type="text/javascript">
-      let encrypt_bt = document.querySelector('#encrypt_bt')
-      let output_div = document.querySelector('#output_div')
       let answers = ['It is certain', 'It is decidedly so', 'Without a doubt', 'Yes definitely', 'You may rely on it', 'As I see it, yes', 'Most likely', 'Outlook good', 'Yes', 'Signs point to yes', 'Reply hazy try again', 'Ask again later', 'Better not tell you now', 'Cannot predict now', 'Concentrate and ask again', 'Don\'t count on it', 'My reply is no', 'My sources say no', 'Outlook not so good', 'Very doubtful']
 
       let random_index = Math.floor(Math.random()*answers.length)
