--- a/Code/Drew/javascript/lab01-8ball.html
+++ b/Code/Drew/javascript/lab01-8ball.html
@@ -26,9 +26,13 @@
     }
     #text_input {
       text-align: center;
-      width: 300px;
+      width: 400px;
       margin: 50px;
       margin-left: 100px;
+      font-size: 30px;
+    }
+    #submit_button {
+      font-size: 25px;
     }
     #output_div {
       color: #a6f1f6;
@@ -38,11 +42,11 @@
     }
     #ball {
       position: absolute;
-      top: 20px;
+      top: 70px;
       left: 20px;
       height: 200px;
     }
-    @media only screen and (max-width:850px) {
+    @media only screen and (max-width:900px) {
       #ball {
         top: auto;
         bottom: 20px;
@@ -59,7 +63,7 @@
     </header>
     <div class="form">
       <input id="text_input" type="text" placeholder="Ask me a yes/no question"/>
-      <button id="submit_button" onclick="fortune(); click_check();">submit</button>
+      <button id="submit_button" onclick="fortune(); inputCheck();">submit</button>
     </div>
     <img id="ball" src="https://pixabay.com/get/eb30b70c21e90021d85a5840e74e4690e676e6dc04b0144491f4c17ba5efbc/ball-25639_1280.png" alt="">
     <div id="output_div"></div>
@@ -72,7 +76,9 @@
       function fortune() {
         let outWord = computer_choice
         output_div.innerText = outWord
-        let text_input = ''
+      }
+      function inputCheck() {
+
       }
     </script>
   </body>
