--- a/Code/Drew/javascript/lab01-8ball.html
+++ b/Code/Drew/javascript/lab01-8ball.html
@@ -63,22 +63,18 @@
     </header>
     <div class="form">
       <input id="text_input" type="text" placeholder="Ask me a yes/no question"/>
-      <button id="submit_button" onclick="fortune(); inputCheck();">submit</button>
+      <button id="submit_button";">submit</button>
     </div>
     <img id="ball" src="https://pixabay.com/get/eb30b70c21e90021d85a5840e74e4690e676e6dc04b0144491f4c17ba5efbc/ball-25639_1280.png" alt="">
     <div id="output_div"></div>
     <script type="text/javascript">
       let answers = ['It is certain', 'It is decidedly so', 'Without a doubt', 'Yes definitely', 'You may rely on it', 'As I see it, yes', 'Most likely', 'Outlook good', 'Yes', 'Signs point to yes', 'Reply hazy try again', 'Ask again later', 'Better not tell you now', 'Cannot predict now', 'Concentrate and ask again', 'Don\'t count on it', 'My reply is no', 'My sources say no', 'Outlook not so good', 'Very doubtful']
 
-      let random_index = Math.floor(Math.random()*answers.length)
-      let computer_choice = answers[random_index]
-
-      function fortune() {
+      submit_button.onclick = function() {
+        let random_index = Math.floor(Math.random()*answers.length)
+        let computer_choice = answers[random_index]
         let outWord = computer_choice
         output_div.innerText = outWord
-      }
-      function inputCheck() {
-
       }
     </script>
   </body>
