--- a/Code/Drew/javascript/lab01-8ball.html
+++ b/Code/Drew/javascript/lab01-8ball.html
@@ -63,7 +63,7 @@
     </header>
     <div class="form">
       <input id="text_input" type="text" placeholder="Ask me a yes/no question"/>
-      <button id="submit_button";">submit</button>
+      <button id="submit_button">submit</button>
     </div>
     <img id="ball" src="https://pixabay.com/get/eb30b70c21e90021d85a5840e74e4690e676e6dc04b0144491f4c17ba5efbc/ball-25639_1280.png" alt="">
     <div id="output_div"></div>
