--- a/Code/Drew/javascript/lab01-8ball.html
+++ b/Code/Drew/javascript/lab01-8ball.html
@@ -35,6 +35,9 @@
       font-size: 25px;
     }
     #output_div {
+      animation-name: fade-in;
+      animation-duration: 3s;
+      animation-timing-function: cubic-bezier(.99,-0.15,.8,.9);
       color: #a6f1f6;
       font-size: 40px;
       text-align: center;
@@ -46,6 +49,10 @@
       left: 20px;
       height: 200px;
     }
+    .roll {
+      animation-name: roll;
+      animation-duration: 5s;
+    }
     @media only screen and (max-width:900px) {
       #ball {
         top: auto;
@@ -54,6 +61,22 @@
         margin-left: auto;
         margin-right: auto;
       }
+    }
+    @keyframes roll {
+      0% {transform:rotate(0deg);}
+      100% {transform:rotate(360deg);}
+    }
+    @-moz-keyframes roll {
+      0% {-moz-transform:rotate(0deg);}
+      100% {-moz-transform:rotate(360deg);}
+    }
+    @keyframes fade-in {
+      0%   { opacity: 0; }
+      100% { opacity: 1; }
+    }
+    @-moz-keyframes fade-in {
+      0%   { opacity: 0; }
+      100% { opacity: 1; }
     }
     </style>
   </head>
@@ -68,13 +91,17 @@
     <img id="ball" src="https://pixabay.com/get/eb30b70c21e90021d85a5840e74e4690e676e6dc04b0144491f4c17ba5efbc/ball-25639_1280.png" alt="">
     <div id="output_div"></div>
     <script type="text/javascript">
+      let ball = document.querySelector(#ball)
+      // var ball = getElementById("ball");
       let answers = ['It is certain', 'It is decidedly so', 'Without a doubt', 'Yes definitely', 'You may rely on it', 'As I see it, yes', 'Most likely', 'Outlook good', 'Yes', 'Signs point to yes', 'Reply hazy try again', 'Ask again later', 'Better not tell you now', 'Cannot predict now', 'Concentrate and ask again', 'Don\'t count on it', 'My reply is no', 'My sources say no', 'Outlook not so good', 'Very doubtful']
-
       submit_button.onclick = function() {
+        ball.setAttribute("class" "roll")
+        let user_input = document.querySelector('#text_input')
         let random_index = Math.floor(Math.random()*answers.length)
         let computer_choice = answers[random_index]
         let outWord = computer_choice
         output_div.innerText = outWord
+        let text_input = ''
       }
     </script>
   </body>
