--- a/Code/Drew/htmlcss/lab04-personal_portfolio.html
+++ b/Code/Drew/htmlcss/lab04-personal_portfolio.html
@@ -8,31 +8,31 @@
     <title>Drew Herron</title>
     <style type="text/css">
       .header {
-        display: flex;
-        flex-direction: column;
-        background: linear-gradient(to bottom, black, #111111);
-        /* background-color: black; */
-        margin-bottom: auto;
-        height: 10%;
+        position: relative;
+        margin-bottom: 0px;
+        height: 5%;
+        z-index: 99
       }
       #header-name {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: 30px;
+        transform: translate(-50%, -50%);
         font-family: 'Alfa Slab One', cursive;
         color: white;
         text-align: center;
         font-size: 50px;
+        z-index: 99
       }
-      #header-nav {
+      .navbar {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        /* background-color: #000000; */
-        background: linear-gradient(to bottom, #111111, #262626);
         padding-bottom: 30px;
-        margin-bottom: -5px;
       }
-      .nav-button {
+      .navbutton {
         display: inline-block;
-        background-color: #ebac21;
         border: none;
         color: #FFFFFF;
         text-align: center;
@@ -44,86 +44,87 @@
         margin: 5px;
         border-radius: 3px;
       }
-      .nav-button span {
-        cursor: pointer;
-        display: inline-block;
+      #mountains {
         position: relative;
-        transition: 0.5s;
-      }
-      .nav-button span:after {
-        content: '\00bb';
-        position: absolute;
-        opacity: 0;
-        top: 0;
-        right: -20px;
-        transition: 0.5s;
-      }
-      .nav-button:hover span {
-        padding-right: 25px;
-      }
-      #city-hang {
+        top: 0px;
         margin: 0px;
+        margin-top: -5px;
         border: 0px;
         padding: 0px;
         transform:rotate(180deg);
-        filter:contrast(70%);
+        z-index: 2
+        /* filter:contrast(70%); */
         /* filter: hue-rotate(90deg); */
       }
       body {
-        height: 1500px;
+        height: 2000px;
         /* background-image: url(images/starback.png); */
-        background: linear-gradient(to bottom, black 0%, black 10%, #8500c2 11%, #8501bd 20%, #6d00b7 30%, #4200b0 40%, #22059f 50%, #020087 60%, #00000000), url(images/starback.png);
+        background: linear-gradient(to bottom, #ffead7 15%, #ffc8c9 25%, #6d00b7 35%, #4200b0 45%, #22059f 55%, #020087 65%, #00000000), url(images/starback.png);
         margin: 0px;
         /* margin-left: 0px; */
         /* margin-right: 0px; */
         padding-bottom: 60px;
+      }
+      p {
+        margin: 0px;
       }
       .container {
         min-height: 100%
         position: relative;
       }
       .footer {
-        position: absolute;
+        position: fixed;
+        text-align: center;
+        left: 0px;
         bottom: 0px;
         width: 100%;
-        height: 60px;
+        height: 20px;
         font-family: 'Share Tech Mono', monospace;
+        color: #c376c2
       }
       .moon {
         -webkit-transform: translateZ(90px) scale(.7);
         transform: translateZ(90px) scale(.7);
         z-index: 1;
       }
+      .sticky {
+        position: -webkit-sticky;
+        position: -moz-sticky;
+        position: -ms-sticky;
+        position: -o-sticky;
+        position: sticky;
+        top: 15px;
+      }
+
     </style>
   </head>
   <body>
     <div class="header">
       <p id="header-name">Drew Herron</p>
-    </div>
-    <div id="header-nav">
-      <div class="nav-button">
-        <span>About?</span>
-      </div>
-      <div class="nav-button">
-        <span>Yes?</span>
-      </div>
-      <div class="nav-button">
-        <!-- <a href="https://twitter.com/herrherron" class="fab fa-twitter-square"><span class="label">Twitter</span></a> -->
-        <i class="fab fa-twitter"></i>
-        <!-- <span>No.</span> -->
-      </div>
-    </div>
-    <div id="city-hang">
-      <img src="images/city-hang.png" alt="Stalactown" width="100%">
+      <img id="mountains" src="images/mountains.gif" width="100%">
     </div>
     <div class="container">
       <p>container</p>
     </div>
+    <div class="sticky navbar">
+      <div class="navbutton">
+        <img src="images/moon.png" width="100px">
+      </div>
+        <div class="navbutton">
+      <span>Button</span>
+        </div>
+      <div class="navbutton">
+        <span>Button</span>
+      </div>
+      <div class="navbutton">
+        <span>Button</span>
+      </div>
+    </div>
     <div class="moon">
-      <img src="images/moon.png" alt="Moon" width="200px">
+      <!-- <img src="images/moon.png" width="200px"> -->
     </div>
     <div class="footer">
-        <p>Footer</p>
+        <p>© 2019 Drew Herron</p>
     </div>
   </body>
 </html>
