--- a/Code/Kat/JavaScript/lab1.html
+++ b/Code/Kat/JavaScript/lab1.html
@@ -4,6 +4,9 @@ Let's write a simple REPL (read evaluate print loop) calculator that can handle 
 <!DOCTYPE html>
 <html>
     <head>
+
+    </head>
+    <body>
       <script type="text/javascript">
         let user_num1 = null
         let user_num2 = null
@@ -43,6 +46,5 @@ Let's write a simple REPL (read evaluate print loop) calculator that can handle 
           }
         }
       </script>
-    </head>
-    <body></body>
+    </body>
 </html>
