--- a/Code/Drew/htmlcss/lab04-personal_portfolio.html
+++ b/Code/Drew/htmlcss/lab04-personal_portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Share+Tech+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Share+Tech+Mono|Paytone+One" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
     <title>Drew Herron</title>
     <style type="text/css">
@@ -11,19 +11,20 @@
         position: relative;
         margin-bottom: 0px;
         height: 5%;
-        z-index: 99
+        z-index: 3
       }
       #header-name {
         position: absolute;
         top: 50%;
         left: 50%;
         margin-top: 30px;
+        margin-left: 20px;
         transform: translate(-50%, -50%);
-        font-family: 'Alfa Slab One', cursive;
-        color: white;
+        font-family: 'Paytone One', sans-serif;
+        color: #ffd6cf;
         text-align: center;
         font-size: 50px;
-        z-index: 99
+        z-index: 3
       }
       .navbar {
         display: flex;
@@ -34,10 +35,10 @@
       .navbutton {
         display: inline-block;
         border: none;
-        color: #FFFFFF;
+        color: #ffd6cf;
         text-align: center;
         font-size: 18px;
-        padding: 10px;
+        padding: 30px;
         width: 200px;
         transition: all 0.5s;
         cursor: pointer;
